@@ -1,3 +1,6 @@
+USER VISIBLE CHANGES BETWEEN ACE-6.1.9 and ACE-6.2.0
+====================================================
+
 USER VISIBLE CHANGES BETWEEN ACE-6.1.8 and ACE-6.1.9
 ====================================================
 
